--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "LibraryManagementSystem": {
+    "librarymanagementsystem-angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:class": {
@@ -35,7 +35,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/LibraryManagementSystem",
+            "outputPath": "dist/librarymanagementsystem-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -46,9 +46,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              // "../node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -85,18 +90,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "LibraryManagementSystem:build"
+            "browserTarget": "librarymanagementsystem-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "LibraryManagementSystem:build:production"
+              "browserTarget": "librarymanagementsystem-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "LibraryManagementSystem:build"
+            "browserTarget": "librarymanagementsystem-angular:build"
           }
         },
         "test": {
@@ -133,15 +138,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "LibraryManagementSystem:serve"
+            "devServerTarget": "librarymanagementsystem-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "LibraryManagementSystem:serve:production"
+              "devServerTarget": "librarymanagementsystem-angular:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "LibraryManagementSystem"
+  "defaultProject": "librarymanagementsystem-angular"
 }
